# dndserver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  config.example.yml  config.yml  docker-compose.yml  entrypoint.sh  formats.json  perks.yml  pyproject.toml  standalone_client_big_payload_testing.py  standalone_client_timeout_testing.py  start.sh
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  flake8.yml
alembic/: ce81c90ea56b_modified_hwids_table_hwid_is_not_more_.py  da3ce2b00c91_added_ipaddress_table.py  env.py  script.py.mako
alembic/versions/: 07685a4b5061_added_items_item_attributes_to_the_db.py  094dedfeda72_changed_character_starting_level_to_.py  1c1df7503576_user_ig_is_now_account_id_character_.py  1e34cc7ebc1c_initial_migration.py  3316d022ea2c_initial_migration.py  422a4c93bed7_added_merchants_to_the_database.py  43904c40d763_added_merchants_to_the_database.py  489dbe73a913_added_login_table.py  48c07ad1448d_adjusted_blockeduser_column_names.py  555a5ce93305_renamed_user_id_to_account_id_across_.py  5eb5865b25e6_.py  5f041eb74995_added_flag_for_if_the_user_is_a_trader.py  62baba80a478_added_blocked_user_support.py  64412c0be1f7_added_spells_to_the_db.py  666ee8c39e0e_added_inventory_count.py  (+13 more)
dndserver/: __init__.py  alembic.ini  config.py  console.py  database.py  dndserver.db  enums.py  game.py  gameserver.py  matchmaking.py  models.py  parties.py  perksandskills.py  persistent.py  protocol.py  server.py  sessions.py  utils.py
nginx-docker/: Dockerfile  nginx.conf
(+620 files in other folders)
